# micro-subscribers

./: Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml
.docker/: entrypoint.sh
micro_subscribers/: asgi.py  settings.py  urls.py  wsgi.py
