[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Lucas Sousa", email = "lucas103101@gmail.com"},
]
dependencies = ["asgiref==3.4.1", "pytz==2021.3", "sqlparse==0.4.2", "django==3.2.10"]
requires-python = ">=3.9"
license = {text = "MIT"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
